# zcash-donation-tracker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tests/: __init__.py  test_cli.py  test_rpc_client.py
zdt/: __init__.py  cli.py  config.py  models.py  rpc_client.py  webapp.py
