[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zcash-donation-tracker"
version = "0.1.0"
description = "Track donations to Zcash z-addresses via viewing keys"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zcash Donation Tracker Contributors"}
]
keywords = ["zcash", "cryptocurrency", "donations", "blockchain", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "click==8.1.7",
    "rich==13.7.0",
    "requests==2.31.0",
    "toml==0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "httpx==0.25.2",
]

[project.scripts]
zdt = "zdt.cli:main"

[project.urls]
Homepage = "https://github.com/pavlenkotm/zcash-donation-tracker"
Repository = "https://github.com/pavlenkotm/zcash-donation-tracker"
Issues = "https://github.com/pavlenkotm/zcash-donation-tracker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["zdt*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
